kubernetes/apps/flux-system/tofu-controller/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: tofu-runner-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: tf-runner
    egress:
      - toFQDNs:
          - matchName: api.cloudflare.com
          - matchName: api.migadu.com
          - matchName: github.com
          - matchName: registry.opentofu.org
          - matchName: registry.terraform.io
          - matchName: release-assets.githubusercontent.com
        toPorts:
          - ports:
              - port: "443"
